desktop-pwas: Don't intercept links to apps that open in a tab

When users install a Desktop PWA, the app will open in a window by
default. User can still change the launch container in chrome://apps or
by right clicking the app icon on Chrome OS. When users change the launch
container to tab, we stop intercepting links for that app.

Bug: 771496
Change-Id: Ie0bd0c7883afbbfffbd94bc577665865699fca6e
Reviewed-on: https://chromium-review.googlesource.com/789731
Reviewed-by: Ben Wells <benwells@chromium.org>
Reviewed-by: Matt Giuca <mgiuca@chromium.org>
Commit-Queue: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519241}
Former-commit-id: 0d467f977411c7af65b047faea30147a41c4c9f4